; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_mem.c_CRYPTO_set_mem_debug.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_mem.c_CRYPTO_set_mem_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@allow_customize = common dso_local global i32 0, align 4
@call_malloc_debug = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CRYPTO_set_mem_debug(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @allow_customize, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %9

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  store i32 %8, i32* @call_malloc_debug, align 4
  store i32 1, i32* %2, align 4
  br label %9

9:                                                ; preds = %7, %6
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
